--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,14 @@
+import groovy.json.JsonSlurperClassic
+
+def jsonParse(def json){
+    new groovy.json.JsonSlurperClassic().parseText(json)
+}
+
 pipeline{
     agent any
-
+    environment {
+        appName = "variable"
+    }
 
     stages{
         stage('paso1'){
@@ -12,4 +20,13 @@ pipeline{
             }
         }
     }
+
+    post{
+
+        always{
+            sh "echo 'post always'"
+        }
+
+    }
+
 }
