--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,32 +1,11 @@
-import groovy.json.JsonSlurperClassic
-
-def jsonParse(def json){
-    new groovy.json.JsonSlurperClassic().parseText(json)
-}
-
-pipeline{
+pipeline {
     agent any
-    environment {
-        appName = "variable"
-    }
 
-    stages{
-        stage('paso1'){
-
-            steps{
-                script{
-                    sh "echo 'hola mundo'"
-                }
+    stages {
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
             }
         }
     }
-
-    post{
-
-        always{
-            sh "echo 'post always'"
-        }
-
-    }
-
 }
