--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,9 +22,9 @@ pipeline {
         stage('stop'){
 
             when {
-                expression{
-                    DOCKER_EXIST = sh(returnStdout: true, script: 'echo "$(docker ps -q --filter name=${name_final})"'
-                    return DOCKER_EXIST !=''
+                expression {
+                    DOCKER_EXIST = sh(returnStdout: true, script: 'echo "$(docker ps -q --filter name=${name_final})"').trim()
+                    return DOCKER_EXIST != ''
                 }
             }
             steps {
