--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                    docker build    jobs/dockerweb/ -t ${name_imagen}:${tag_imagen}
+                    docker build  -t ${name_imagen}:${tag_imagen}
                     '''
                     }
                     
