--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            label 'windows'
+            image 'mcr.microsoft.com/powershell'
+        }
+    }
 
     parameters{
         string(name: 'name_container', defaultValue: 'myweb', description: 'nombredocker')
