--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        docker {
+        any {
             label 'windows'
             image 'mcr.microsoft.com/powershell'
         }
