--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        any {
+        dockerfile {
             label 'windows'
             image 'mcr.microsoft.com/powershell'
         }
@@ -24,7 +24,23 @@ pipeline {
             }
         }
 
-       
+        stage('stop'){
+
+            when {
+                expression {
+                    DOCKER_EXIST = sh(returnStdout: true, script: 'echo "$(docker ps -q --filter name=${name_final})"').trim()
+                    return DOCKER_EXIST != ''
+                }
+            }
+            steps {
+                script{
+                    sh ''' 
+                         docker stop ${name_final}
+                    '''
+                }
+            }
+
+        }
 
                 stage('build') {
             steps {
